Ignore future changes to database configuration.
Removed database.php from the index and replaced it
with database.default.php, with instructions to copy
and modify the file as needed.
This is to avoid credentials being committed and to
allow pushing changes without the need to update
config files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Ignore CodeIgniter dev files
+application/config/database.php
 application/config/development
 application/config/testing
 application/logs/log-*.php
